# nix

./: .envrc  .gitignore  0001-wip-changes-for-use-with-Nix.patch  HVM_NIX_EVALUATOR_INVESTIGATION.md  Makefile  README.md  analyze-eval-logs.py  analyze-xctrace.py  bulk-derivation-show.sh  cached-import-test.nix  chatgpt-problem-structural-hashing-research.md  chatgpt-problem-structural-hashing.md  claude-problem-intern-list-attrs.md  claude-problem-structural-hashing-research.md  claude-problem-structural-hashing.md  claude-problem-with-env.md  compare-logs.py  compare-runs.py  compare-xctrace.py  debug-crash.sh  eval-trace-review.md  flake.nix  generate-runs.py  gnomes.nix  kagi-advances-since-dolstra-maximal-laziness-research.md  kagi-problem-structural-hashing-research.md  minimal-crash.nix  package.nix  round-1-answers.md  round-1.md  round-2-answers.md  round-2.md  round-3-answers.md  round-3.md  round-4-answers.md  round-4.md  round-5-answers.md  round-5.md  round-6-answers.md  round-6.md  (+7 more)
benchmarks/eval-trace-bench/: HASH-BACKEND-BENCHMARK.md  package.nix  pyproject.toml
benchmarks/eval-trace-bench/src/eval_trace_bench/: __init__.py  classify.py  cli.py  cliutil.py  dataframe.py  diff.py  discovery.py  layout.py  logparse.py  metrics.py  models.py  render.py  simulation.py  stats.py
benchmarks/eval-trace-bench/tests/: test_semantics.py
src/libexpr/: attr-path.cc  attr-set.cc  attr-set.hh  dep-tracker.cc  dependency-tracker.cc  env-hash.cc  eval-cache-db.cc  eval-cache-store.cc  eval-cache.cc  eval-environment.cc  eval-gc.cc  eval-hash.cc  eval-index-db.cc  eval-inline.hh  eval-inputs.cc  eval-profiler.cc  eval-result-serialise.cc  eval-settings.cc  eval-trace-context.cc  eval-trace-deps.cc  eval.cc  eval.hh  expr-hash.cc  file-load-tracker.cc  get-drvs.cc  ghc-gc.cc  json-to-value.cc  meson.build  meson.options  nixexpr.cc  package.nix  paths.cc  primops.cc  print-ambiguous.cc  print.cc  stat-hash-cache.cc  thunk-hash.cc  trace-cache.cc  trace-hash.cc  trace-store.cc  (+6 more)
src/libexpr-tests/: error_traces.cc  eval-cache.cc  eval.cc  get-drvs-bench.cc  hash.cc  lazy-fetcher-attr.cc  main.cc  meson.build  nix_api_expr.cc  package.nix  path-accessor-preservation.cc  primops.cc  store-path-coercion.cc  trivial.cc
src/libexpr-tests/eval-cache/: dep-tracking.cc  eval-cache-db.cc  eval-cache-store.cc  eval-cache.cc  eval-index-db.cc  eval-result-serialise.cc  file-load-tracker.cc  helpers.cc  helpers.hh  integration.cc  stat-hash-cache.cc
src/libexpr-tests/eval-trace/: CLAUDE.md  cold-verify.cc  dep-copied-path.cc  dep-tracker.cc  dep-tracking.cc  fiber-owner-thread.cc  helpers.cc  helpers.hh  integration.cc  per-sibling-invalidation.cc  semantic-registry-test-access.hh  stat-hash-cache.cc  trace-cache.cc  trace-hash.cc  trace-runtime-test-access.hh  trace-store-core.cc  trace-store-nixpkgs.cc  trace-store-parent-context.cc  trace-store-serialization.cc  trace-store.cc  traced-data-advanced.cc  traced-data-builtins.cc  traced-data-gaps.cc  traced-data-json-basic.cc  traced-data-readdir.cc  traced-data-shape-deps.cc  traced-data.cc
src/libexpr-tests/eval-trace/dep/: child-range-exclusion.cc  copied-path.cc  dep-stability.cc  epoch-bugs.cc  epoch-record.cc  epoch-stability.cc  format.cc  hash.cc  nix-binding-determinism.cc  oracle-basic.cc  oracle-nested.cc  replay-integration.cc  replay-pollution.cc  show-for-hash.cc  source-tree-soundness.cc  stat-hash-cache.cc  stat-hash-store.cc  tracker.cc
src/libexpr-tests/eval-trace/nix-binding/: basic.cc  edge-cases.cc  override.cc  precision.cc
src/libexpr-tests/eval-trace/property/: CLAUDE.md  expr-gen.cc  expr-gen.hh  generator-test.cc  value-assert.hh
src/libexpr-tests/eval-trace/store/: cache.cc  call-arg-nixbinding.cc  concurrency.cc  copied-path.cc  cqk-lattice.cc  cross-session-subsumption.cc  dep-overapprox.cc  dep-source.cc  derived-store-path.cc  error-handling.cc  eval-info.cc  git-identity-recovery.cc  git-identity.cc  hash.cc  in-memory-rows-backend.cc  large-trace.cc  multi-session.cc  nar-identity.cc  nixpkgs-optimization.cc  nixpkgs-patterns.cc  parent-context.cc  policy-digest.cc  record-verify.cc  recovery.cc  result-encoding.cc  runtime-fetch-identity.cc  semantic-registry.cc  serialization.cc  session-config.cc  set-once.cc  store-path-availability.cc  sv-telemetry.cc  trace-parent-slot.cc  trace-value-context.cc
src/libexpr-tests/eval-trace/traced-data/: advanced.cc  builtins-access.cc  builtins-len.cc  builtins-misc.cc  dep-precision-formals.cc  dep-precision-intersect.cc  dep-precision-update.cc  dirset-verification.cc  gaps-propagation.cc  gaps-rawcontent.cc  gaps-soundness.cc  has-key.cc  (+8 more)
src/libexpr-tests/hvm4/: hvm4-arithmetic-test.cc  hvm4-attrs-test.cc  hvm4-backend-test.cc  hvm4-bigint-test.cc  hvm4-boolean-test.cc  hvm4-capability-test.cc  hvm4-closure-test.cc  hvm4-comparison-test.cc  hvm4-conditional-test.cc  hvm4-derivation-test.cc  hvm4-float-test.cc  hvm4-import-test.cc  hvm4-integration-test.cc  hvm4-known-limitations-test.cc  hvm4-lambda-test.cc  hvm4-let-test.cc  hvm4-list-test.cc  hvm4-null-test.cc  hvm4-path-test.cc  hvm4-pattern-test.cc  hvm4-primop-test.cc  hvm4-rec-test.cc  hvm4-runtime-test.cc  hvm4-stress-test.cc  hvm4-string-test.cc  hvm4-test-common.hh  hvm4-with-test.cc
src/libexpr-tests/value/: print.cc
src/libexpr/eval-environment/: authority.cc  private-errors.hh  request-builder.cc  session-builders.cc
src/libexpr/eval-trace/: CLAUDE.md  binary-frame.hh  context.cc  counters.cc  hash-spec.cc  toml-canonical.hh
src/libexpr/flake/: flake.cc
src/libexpr/ghc-alloc/: NixAlloc.hs  build.sh  libghcalloc.cabal
src/libexpr/hvm4/: STATUS.md  hvm4-attrs.cc  hvm4-backend.cc  hvm4-bigint.cc  hvm4-compile-context.cc  hvm4-compiler-analysis.cc  hvm4-compiler-emit-attrs.cc  hvm4-compiler-emit-basic.cc  hvm4-compiler-emit-control.cc  hvm4-compiler-emit-lambda.cc  hvm4-compiler-emit-ops.cc  hvm4-compiler.cc  hvm4-list.cc  hvm4-path.cc  hvm4-result.cc  hvm4-runtime.cc  hvm4-string.cc
src/libexpr/primops/: context.cc  fetchClosure.cc  fetchMercurial.cc  fetchTree.cc  fromTOML.cc
(+665 files in other folders)
